# SecAi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: Caddyfile.control.example  Caddyfile.storefront.example  alibaba_cloud.md  alibaba_cloud.py  compose.yaml  storefront.compose.yaml  storefront.env.example
docs/: ALIBABA_CLOUD_PROOF.md  USER_FLOW.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/docker-entrypoint.d/: 40-secai-runtime-config.sh
frontend/public/: config.js  index.html
frontend/src/: App.css  App.tsx  api.ts  types.ts  vite-env.d.ts
protected_site/: Dockerfile  README.md  __init__.py  app.py  assets.py  catalog.py  client_ip.py  pages.py  render.py  telemetry.py
secai/: __init__.py  app.py  mcp_stdio.py
secai/actions/: __init__.py  capabilities.py  expiry.py  incidents.py  mcp_client.py  mcp_server.py  protection_presentation.py  remediation.py  retention.py
secai/agent/: README.md  __init__.py  action_jobs.py  action_tools.py  executor.py  jobs.py  profiles.py  prompts.py  reporting.py  runtime.py  schemas.py  tools.py  trace.py  validation.py  workflow.py
secai/dashboard_api/: __init__.py  app.py  auth_service.py  dependencies.py  rate_limit.py  request_limits.py
secai/database/: __init__.py  _utils.py  accounts_sites.py  action_jobs.py  analysis_qwen.py  cloud_report_config.py  connection.py  schema.py  (+5 more)
tests/: conftest.py  test_alibaba_cloud.py  test_api.py  test_autopilot.py  test_database.py  test_storefront.py
(+65 files in other folders)
