[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "secai-autopilot"
version = "0.1.0"
description = "Qwen-powered autonomous website security triage and Alibaba Cloud remediation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.3.0",
  "mcp>=1.27,<2",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "aliyun-log-python-sdk>=0.9.0",
  "cryptography>=48.0.1",
  "alibabacloud-tea-openapi==0.3.16",
  "alibabacloud-credentials>=1.0.9",
  "alibabacloud-ecs20140526==7.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["secai*", "protected_site*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["secai", "protected_site"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"secai/dashboard_api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests"]
